--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -409,7 +409,7 @@
                         {{ end }}
 
                         {{/* Top players table */}}
-                        <h5>Top Game DB Players</h5>
+                        <h5>Top Players</h5>
                         <div class="table-responsive">
                             <table class="table table-hover table-striped mb-0" data-path="/apps/{{ .App.ID }}/time.json" id="top-players-table">
                                 <thead class="thead-light">
