--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -411,7 +411,7 @@
                         {{/* Top players table */}}
                         <h5>Top Players</h5>
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" data-path="/apps/{{ .App.ID }}/time.json" id="top-players-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-path="/apps/{{ .App.ID }}/time.json" id="top-players-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="thin">Rank</th>
