Add steam hunter links

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -187,6 +187,8 @@
 
                                         <h6><a href="https://www.achievementstats.com/index.php?action=profile&playerId={{ .Player.ID }}" target="_blank">View profile on Achievement Stats</a></h6>
 
+                                        <h6><a href="https://steamhunters.com/profiles/{{ .Player.ID }}/games" target="_blank">View profile on Steam Hunters</a></h6>
+
                                     </div>
                                 </div>
 
