--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -60,7 +60,11 @@
                     </li>
                     <li class="nav-item">
                         <a id="update-button" class="nav-link nav-link-small" href="#" role="tab" data-csrf="{{ .CSRF }}" rel="nofollow">
-                            <i class="fas fa-sync-alt"></i> Update
+                            {{ if .InQueue }}
+                                <i class="fas fa-sync-alt fa-spin"></i> In Queue
+                            {{ else }}
+                                <i class="fas fa-sync-alt"></i> Update
+                            {{ end }}
                         </a>
                     </li>
                 </ul>
