Fix home borders

--- a/cmd/webserver/assets/sass/_home.scss
+++ b/cmd/webserver/assets/sass/_home.scss
@@ -57,18 +57,14 @@
     }
 
     #new-releases {
-
-        //.card.top {
-        //    border-bottom-left-radius: 0;
-        //    border-bottom-right-radius: 0;
-        //}
-        //
-        //.card.bottom {
-        //    border-top-left-radius: 0;
-        //    border-top-right-radius: 0;
-        //}
-
         .row {
+
+            img {
+                width: 100%;
+                border-bottom: solid #fff 1px;
+            }
+
+            // Fix padding for multi column
             > div:nth-child(2n) {
                 @include media-breakpoint-up(sm) {
                     padding-left: 0;
@@ -85,21 +81,6 @@
                 @include media-breakpoint-up(lg) {
                     padding-right: 15px;
                 }
-            }
-        }
-
-        a {
-            img {
-                //margin-bottom: 0.5rem;
-                width: 100%;
-                border-bottom: solid #fff 1px;
-            }
-        }
-
-        a:last-of-type {
-            img {
-                //margin-bottom: 0;
-                border-bottom: 0;
             }
         }
     }
