--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -146,7 +146,7 @@
                 </div>
 
             </div>
-            <div class="col-12 col-lg-4" id="new-releases">
+            <div class="col-12 col-lg-4">
 
                 <div class="card mb-4">
                     <h5 class="card-header">Player Search</h5>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
 
-                <div class="card border-0">
+                <div class="card border-0" id="new-releases">
                     <div class="card-header">Popular New Releases</div>
                     <div class="card-body p-0">
                         <div class="row">
