--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -48,10 +48,11 @@
 
                                 <form action="/api" target="_blank" method="{{ $verb }}">
 
-                                    <div class="card mb-4">
+                                    <div class="card">
                                         <h4 class="card-header">{{ .Summary }}</h4>
                                         <div class="card-body">
-                                            <div class="input-group mb-0">
+
+                                            <div class="input-group mb-2">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">{{ $verb }}</span>
                                                 </div>
@@ -63,7 +64,7 @@
                                             </div>
 
 
-                                            <div class="table-responsive">
+                                            <div class="table-responsive mb-2">
                                                 <table class="table table-borderless table-hover table-sm mb-0">
                                                     <thead>
                                                     <tr>
@@ -88,6 +89,10 @@
                                                 </table>
                                             </div>
 
+                                            <h5 class="mb-0">Response</h5>
+                                            <div class="json">
+                                                {{ $.PathToSchema "/apps" }}
+                                            </div>
 
                                         </div>
                                     </div>
