--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -91,7 +91,7 @@
 
                                             <h5 class="mb-0">Response</h5>
                                             <div class="json">
-                                                {{ $.PathToSchema "/apps" }}
+                                                {{ $.PathToSchema $pathKey }}
                                             </div>
 
                                         </div>
