Add counts to recent apps

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -507,7 +507,7 @@
                             {{/*                        {{ if gt .Player.FriendsCount 0}}*/}}
 
                             <div class="table-responsive mb-4">
-                                <table class="table table-hover table-striped mb-4" data-path="/players/{{ .Player.ID }}/recent.json" id="recent-games">
+                                <table class="table table-hover table-striped table-counts mb-4" data-path="/players/{{ .Player.ID }}/recent.json" id="recent-games">
                                     <thead class="thead-light">
                                     <tr>
                                         <th scope="col">Recent Games</th>
