--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -224,8 +224,8 @@
 
                             <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
                             <a class="dropdown-item" href="/queues">Queues</a>
-                            <a class="dropdown-item" href="/api">API (Game DB)</a>
-                            <a class="dropdown-item" href="/steam-api">API (Steam)</a>
+                            <a class="dropdown-item" href="/api">Game DB API</a>
+                            <a class="dropdown-item" href="/steam-api">Steam API</a>
 
                         </div>
                     </li>
