--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -95,7 +95,7 @@
 
                                             <h5 class="mb-0">Response</h5>
                                             <div class="json">
-                                                {{ $.PathToSchema $pathKey }}
+                                                {{ $.PathToSchema $pathKey $verb }}
                                             </div>
 
                                         </div>
