--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -5,10 +5,9 @@
 
         <div class="jumbotron mb-0">
 
-            <h1><i class="fas fa-database"></i> API <small>(BETA)</small></h1>
-            <p class="lead">{{ .Description }}</p>
-            <small>For an API key, please <a href="/signup">signup</a> and <a href="/donate">upgrade</a>.</small>
-            <small>For the Steam API, see <a href="/steam-api">here</a>.</small>
+            <h1><i class="fas fa-cloud-download-alt"></i> Game DB API</h1>
+            <div><small>If you need anything that is not in the API yet, please <a href="/contact">contact</a> me.</small></div>
+            <small>To use the API, you need to upgrade your account. For the Steam API, see <a href="/steam-api">here</a>.</small>
 
         </div>
 
